--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="big-blue-sky">
   <div class="big-blue-sky__main">
     <app-title class="big-blue-sky__main--title" [text]="title"></app-title>
-    <app-button class="big-blue-sky__main--button" [text]="main__btnText"></app-button>
+    <app-button (onClickBtn)="onClick()" class="big-blue-sky__main--button" [text]="main__btnText"></app-button>
   </div>
 </div>
