--- a/src/app/_config.scss
+++ b/src/app/_config.scss
@@ -1,5 +1,10 @@
-$primary-color: rgb(25, 75, 150);
-$secondary-color: rgb(25, 100, 125);
+$primary-color: #3065ff;
+$secondary-color: #204eff;
+$tertiary-color: #121fa1;
+$dark: #001281;
+$text-color-primary: #fff;
+$text-color-secondary: #abebff;
+$text-color-disabled: #7bbbe0;
 
 @mixin transition-ease {
   transition: all 0.5s ease-in-out;
