Add background overlay & animations.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="big-blue-sky">
   <div class="big-blue-sky__main">
     <div
-      [ngClass]="{ 'black-overlay': true, 'open-menu': openMenuBtnClicked }"
+      [ngClass]="{ 'background-overlay': true, 'open-menu': openMenuBtnClicked }"
     ></div>
     <app-title class="big-blue-sky__main--title" [text]="title"></app-title>
     <app-button
