--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,28 +1,61 @@
-@import 'config';
+@import "config";
 
 .big-blue-sky {
   &__main {
     text-align: center;
     background: linear-gradient(
-      to bottom,
-      rgba($primary-color, 1),
-      rgba($secondary-color, 0.2)
-    ),
-    url(../assets/big-blue-sky.jpg);
+        to bottom,
+        rgba($primary-color, 1),
+        rgba($secondary-color, 0.2)
+      ),
+      url(../assets/big-blue-sky.jpg);
     background-attachment: fixed;
     background-size: cover;
     height: 100vh;
     color: #fff;
-    padding: calc(33vh - 1.5rem) 0.5rem 0.5rem 0.5rem;
-
+    padding: calc(33vh - 1.5rem) 0.5rem 0 0.5rem;
 
     &--title {
-      font-family: Haettenschweiler, 'Franklin Gothic Medium', 'Arial Narrow Bold', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-      font-size: 2rem;
+      font-family: Haettenschweiler, "Franklin Gothic Medium",
+        "Arial Narrow Bold", -apple-system, BlinkMacSystemFont, "Segoe UI",
+        Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+        sans-serif;
+      font-size: 10rem;
     }
     &--button {
-      font-family: 'Franklin Gothic Medium', 'Arial Narrow', sans-serif, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue';
-      padding: 25vh 0 0 0;
+      font-family: "Franklin Gothic Medium", "Arial Narrow", sans-serif,
+        -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu,
+        Cantarell, "Open Sans", "Helvetica Neue";
+      font-size: 5rem;
+      padding: 0.2rem;
+      z-index: 2;
+      position: relative;
+      top: 0 !important;
+      @include transition-ease;
+    }
+    .open-menu-btn {
+      top: 33vh !important;
+      @include transition-ease;
     }
   }
+
+  .background-overlay {
+    background: #000;
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+    z-index: 1;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    @include transition-ease;
+  }
+
+  .open-menu {
+    opacity: 1;
+    @include transition-ease;
+  }
 }
+
+
