Add Angularization colors to borders on `:hover`.

--- a/src/app/components/main/button/button.component.scss
+++ b/src/app/components/main/button/button.component.scss
@@ -1,33 +1,33 @@
 @import "../../../config";
 
 button {
-  border-radius: 0.3rem;
-  padding: 0.2rem;
+  border-radius: 1rem;
+  padding: 0.5rem 0.75rem;
   background: linear-gradient(
-    to bottom,
-    rgba($primary-color, 0.9),
-    rgba($secondary-color, 0.5)
+    to right,
+    rgba($primary-color, 0.8),
+    rgba($secondary-color, 0.8)
   );
-  border-top: solid 2px #777;
-  border-left: solid 2px #777;
-  border-right: solid 2px #333;
-  border-bottom: solid 2px #333;
+  border-top: solid 0.5rem #777;
+  border-left: solid 0.5rem #777;
+  border-right: solid 0.5rem #333;
+  border-bottom: solid 0.5rem #333;
   color: #f7f7f7;
-  font-size: 0.33rem;
+  font-size: 2rem;
   @include transition-ease;
 
   &:hover {
     background: linear-gradient(
-      to bottom,
+      to right,
       rgba($primary-color, 1),
       rgba($secondary-color, 1)
     );
-    color: #aef;
+    color: $text-color-secondary;
     cursor: pointer;
-    border-top: solid 2px #37a;
-    border-left: solid 2px #37a;
-    border-right: solid 2px #148;
-    border-bottom: solid 2px #148;
+    border-top: solid 0.5rem $text-color-disabled;
+    border-left: solid 0.5rem $text-color-disabled;
+    border-right: solid 0.5rem $tertiary-color;
+    border-bottom: solid 0.5rem $tertiary-color;
     @include transition-ease;
   }
 }
