Decrease `line-height` a bit.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -21,6 +21,7 @@
         Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
         sans-serif;
       font-size: 10rem;
+      line-height: 1;
     }
     &--button {
       font-family: "Franklin Gothic Medium", "Arial Narrow", sans-serif,
