--- a/src/app/components/menu/clock/clock.component.html
+++ b/src/app/components/menu/clock/clock.component.html
@@ -1,1 +1,18 @@
-<p>clock works!</p>
+<div class="clock">
+  <div class="time">
+    <div class="time__label">
+      TIME
+    </div>
+    <div class="time__hours-minutes-seconds">
+      {{ time }}
+    </div>
+  </div>
+  <div class="shel">
+    <div class="shel__unit">
+      SHEL
+    </div>
+    <div class="shel__amount">
+      {{ shel }}
+    </div>
+  </div>
+</div>
