--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,9 @@
 @import "config";
 
 .big-blue-sky {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu,
+    Cantarell, "Open Sans", "Helvetica Neue";
+
   &__main {
     text-align: center;
     background: linear-gradient(
@@ -24,9 +27,6 @@
       line-height: 1;
     }
     &--button {
-      font-family: "Franklin Gothic Medium", "Arial Narrow", sans-serif,
-        -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu,
-        Cantarell, "Open Sans", "Helvetica Neue";
       font-size: 5rem;
       padding: 0.2rem;
       z-index: 2;
@@ -53,10 +53,23 @@
     @include transition-ease;
   }
 
+  .menu {
+    position: absolute;
+    z-index: 3;
+    &__clock {
+      left: -200%;
+      top: 12.5vh;
+      position: relative;
+      @include transition-ease;
+    }
+    .open-menu-clock {
+      left: 75%;
+      @include transition-ease;
+    }
+  }
+
   .open-menu {
     opacity: 1;
     @include transition-ease;
   }
 }
-
-
