--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,6 +4,11 @@
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu,
     Cantarell, "Open Sans", "Helvetica Neue";
 
+  .toggle-black-background {
+    background: #000;
+    color: #000;
+  }
+
   &__main {
     text-align: center;
     background: linear-gradient(
