--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="big-blue-sky">
+  <!-- Reinforce black background overlay. -->
   <div
     [ngClass]="{
       'big-blue-sky__main': true,
