--- a/src/app/components/main/button/button.component.scss
+++ b/src/app/components/main/button/button.component.scss
@@ -1,21 +1,7 @@
-@import "../../../config";
+@import "../../../config", '../../panel';
 
 button {
-  border-radius: 1rem;
-  padding: 0.5rem 0.75rem;
-  background: linear-gradient(
-    to right,
-    rgba($primary-color, 0.8),
-    rgba($secondary-color, 0.8)
-  );
-  border-top: solid 0.5rem #777;
-  border-left: solid 0.5rem #777;
-  border-right: solid 0.5rem #333;
-  border-bottom: solid 0.5rem #333;
-  color: #f7f7f7;
-  font-size: 1.75rem;
-  @include transition-ease;
-
+  font-size: 1.5rem;
   &:hover {
     background: linear-gradient(
       to right,
