Create menu-list templating & styling.

--- a/src/app/components/menu/menu-list/menu-list.component.html
+++ b/src/app/components/menu/menu-list/menu-list.component.html
@@ -1,1 +1,3 @@
-<p>menu-list works!</p>
+<div class="menu-list panel">
+  <app-menu-item *ngFor="let item of list" [menuItem]="item"> </app-menu-item>
+</div>
