--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,9 +8,16 @@
   >
     <app-title class="big-blue-sky__main--title" [text]="title"></app-title>
     <div class="menu">
+      <app-menu-list
+        [ngClass]="{
+         'menu__menu-list': true,
+          'open-menu-list': openMenuBtnClicked
+        }"
+      >
+      </app-menu-list>
       <app-clock
         [ngClass]="{
-          menu__clock: true,
+          'menu__clock': true,
           'open-menu-clock': openMenuBtnClicked
         }"
       ></app-clock>
