--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,14 @@
         }"
       >
       </app-menu-list>
+      <app-location
+        [ngClass]="{
+         'menu__location': true,
+          'open-menu-location': openMenuBtnClicked
+        }"
+        [location]="location"
+      >
+      </app-location>
       <app-clock
         [ngClass]="{
           'menu__clock': true,
