Darken Angularization's dark colors.

--- a/src/app/_config.scss
+++ b/src/app/_config.scss
@@ -1,10 +1,10 @@
 $primary-color: #3065ff;
 $secondary-color: #204eff;
-$tertiary-color: #121fa1;
-$dark: #001281;
+$tertiary-color: #121e91;
+$dark: #001245;
 $text-color-primary: #fff;
 $text-color-secondary: #abebff;
-$text-color-disabled: #7bbbe0;
+$text-color-disabled: #5b9bb0;
 
 @mixin transition-ease {
   transition: all 0.5s ease-in-out;
