Add responsiveness to menu.

--- a/src/app/components/menu/persona/persona.component.scss
+++ b/src/app/components/menu/persona/persona.component.scss
@@ -1,4 +1,4 @@
-@import "../../../config", "../../panel";
+@import "../../../config", "../../panel", "../../../responsive";
 
 .persona {
   width: 100vw;
