--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,4 @@
-@import "config";
+@import "config", "responsive";
 
 .big-blue-sky {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu,
@@ -102,6 +102,7 @@
       position: absolute;
       z-index: -1;
       right: -1000%;
+      left: -1000%;
       @include transition-ease;
     }
 
@@ -124,6 +125,7 @@
     }
 
     .open-menu-persona {
+      bottom: -5rem;
       right: 0;
       left: 0;
       @include transition-ease;
