--- a/src/app/components/menu/menu-list/menu-list.component.scss
+++ b/src/app/components/menu/menu-list/menu-list.component.scss
@@ -1,8 +1,8 @@
-@import "../../../config", "../../panel";
+@import "../../../config", "../../panel", "../../../responsive";
 
 .menu-list {
   margin: 0;
-  padding: 1.5rem 9.5rem 1.5rem 1.5rem;
+  padding: 1.5rem 27.5vw 1.5rem 1.5rem;
   width: 0;
   display: flex;
   flex-flow: column;
