Correct `src` path to image asset.

--- a/src/app/components/menu/persona/persona.component.html
+++ b/src/app/components/menu/persona/persona.component.html
@@ -1,7 +1,7 @@
 <div class="persona panel">
   <div class="persona__top">
     <img
-      src="../../../assets/p.png
+      src="assets/p.png
   "
       alt="pjnalls' profile picture."
       class="persona__img"
