--- a/src/app/components/menu/persona/persona.component.scss
+++ b/src/app/components/menu/persona/persona.component.scss
@@ -8,17 +8,18 @@
       padding: 1.5rem;
       h2 {
         color: $text-color-secondary;
-        font-size: 1.5rem;
+        font-size: 1.25rem;
         font-size: 600;
       }
       .lv, .hp, .mp {
         font-weight: 400;
         color: $text-color-primary;
+        font-size: 1.25rem;
       }
     }
   }
   &__img {
-    width: 180px;
+    width: 27.5vw;
     margin: 1rem 5rem 1rem 1rem;
     padding: 0.25rem;
     border-left: solid 0.5rem $text-color-secondary;
@@ -27,8 +28,8 @@
     border-bottom: solid 0.5rem $text-color-disabled;
   }
   &__bottom {
-    padding: 1rem;
-    font-size: 2rem;
+    padding: 0 1rem;
+    font-size: 1.5rem;
   }
-  padding-bottom: 11.5rem;
+  padding-bottom: 12.5vh;
 }
