--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -32,7 +32,7 @@
         "Arial Narrow Bold", -apple-system, BlinkMacSystemFont, "Segoe UI",
         Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
         sans-serif;
-      font-size: 10rem;
+      font-size: 7rem;
       line-height: 1;
     }
     &--button {
@@ -46,7 +46,7 @@
       @include transition-ease;
     }
     .open-menu-btn {
-      top: calc(52.5vh + 4em) !important;
+      top: 80vh !important;
       @include transition-ease;
     }
   }
@@ -71,11 +71,11 @@
   .menu {
     position: absolute;
     z-index: 3;
-    top: 25%;
+    top: 15vh;
     left: 0;
     &__clock {
       left: -200%;
-      top: 7rem;
+      top: 14vh;
       position: relative;
       z-index: 5;
       @include transition-ease;
@@ -83,7 +83,7 @@
 
     &__menu-list {
       top: 100vh;
-      left: calc(45vw + 5.5rem);
+      left: 60vw;
       position: relative;
       z-index: 4;
       @include transition-ease;
@@ -93,12 +93,12 @@
       bottom: 100vh;
       position: relative;
       z-index: 4;
-      left: calc(45vw - 5.5rem);
+      left: 7vw;
       @include transition-ease;
     }
 
     &__menu-persona {
-      bottom: -5rem;
+      top: -10vh;
       position: absolute;
       z-index: -1;
       right: -1000%;
@@ -107,25 +107,24 @@
     }
 
     .open-menu-clock {
-      left: 45vw;
+      left: 7vw;
       @include transition-ease;
     }
 
     .open-menu-list {
-      top: -2rem;
+      top: -7.5vh;
       position: relative;
       @include transition-ease;
     }
 
     .open-menu-location {
-      bottom: -3.75rem;
+      bottom: -14vh;
       position: relative;
       z-index: 6;
       @include transition-ease;
     }
 
     .open-menu-persona {
-      bottom: -5rem;
       right: 0;
       left: 0;
       @include transition-ease;
