--- a/src/app/components/main/button/button.component.scss
+++ b/src/app/components/main/button/button.component.scss
@@ -1,7 +1,7 @@
-@import "../../../config", '../../panel';
+@import "../../../config", "../../panel", "../../../responsive";
 
 button {
-  font-size: 1.5rem;
+  font-size: 1rem;
   &:hover {
     background: linear-gradient(
       to right,
