--- a/src/app/components/menu/clock/clock.component.scss
+++ b/src/app/components/menu/clock/clock.component.scss
@@ -1,8 +1,8 @@
-@import "../../../config", "../../panel";
+@import "../../../config", "../../panel", "../../../responsive";
 
 .clock {
-  font-size: 1.5rem;
-  width: 17.5rem;
+  font-size: 1.25rem;
+  width: 15rem;
   @include transition-ease;
   .time__label,
   .shel__unit {
