--- a/src/app/components/menu/location/location.component.scss
+++ b/src/app/components/menu/location/location.component.scss
@@ -1,5 +1,6 @@
-@import "../../../config", "../../panel";
+@import "../../../config", "../../panel", "../../../responsive";
 
 .location {
-  font-size: 1.5rem;
+  font-size: 1rem;
+  width: 15rem;
 }
