--- a/src/app/components/menu/menu-item/menu-item.component.scss
+++ b/src/app/components/menu/menu-item/menu-item.component.scss
@@ -1,5 +1,7 @@
+@import "../../../config", "../../../responsive";
+
 a {
   text-align: left;
   padding: 0 0 0 0;
-  font-size: 2rem;
+  font-size: 1rem;
 }
