Move up "Close Menu" `button` up a bit.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -46,7 +46,7 @@
       @include transition-ease;
     }
     .open-menu-btn {
-      top: 80vh !important;
+      top: 75% !important;
       @include transition-ease;
     }
   }
