Darken text color in `_config.scss` settings.

--- a/src/app/_config.scss
+++ b/src/app/_config.scss
@@ -3,7 +3,7 @@ $secondary-color: #204eff;
 $tertiary-color: #121e91;
 $dark: #001245;
 $text-color-primary: #fff;
-$text-color-secondary: #abebff;
+$text-color-secondary: #9bdbef;
 $text-color-disabled: #5b9bb0;
 
 @mixin transition-ease {
