Update `.persona__bottom p` text to match profile.

--- a/src/app/components/menu/persona/persona.component.html
+++ b/src/app/components/menu/persona/persona.component.html
@@ -15,6 +15,6 @@
     </div>
   </div>
   <div class="persona__bottom">
-    <p>☀️ Coding UI daily.</p>
+    <p>Coding UI daily 🎨.</p>
   </div>
 </div>
